# gigahack-2025-ai

./: .gitignore  DEPLOY.md  Dockerfile  README.md  anonymizer_mock.py  anonymizer_ronec.py  anonymizer_template.py  api.py  docker-compose.yaml  evaluator.py  generation_stats.json  grouped_entities.json  main.py  mock_subset_200.json  pyproject.toml  realistic_outliers.json
BERT/: BERT_Trainer.py  BertBaseMetadataExtractor.py  MetadataExtractionBase.py  bert_model_usage.py
best_model_epoch10/: meta.json
best_model_epoch10/ner/: model  moves
data/: ner_dataset_spacy.jsonl
frontend/angular-front/: README.md  angular.json  package-lock.json  package.json
frontend/angular-front/src/: index.html  main.ts
frontend/angular-front/src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
frontend/angular-front/src/app/models/: token.model.ts
frontend/angular-front/src/app/services/: data.service.ts
results/: evaluator.md
spacy-extract/: format.py  test.py  train.py
utils/: complete_removal.py  ds_2_spacy.py  ds_2_spacy_jsonl.py  ds_2_spacy_merging.py  extract_html_tags.py  get_label_names.py  group.py  groupby.py  io_service.py  logger.py  outlier_detector.py  pattern_extractor.py
