[project]
name = "gigahack-2025-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
    "wordfreq>=3.1.1",
]
